--- a/styling/styles.css
+++ b/styling/styles.css
@@ -1,7 +1,22 @@
+
+h1 {
+    text-align: center;
+}
+
+h2 {
+    text-align: center;
+}
+
 body {
     background-color: lightgray;
 }
 
 p {
     font-size:x-large;
+}
+
+footer {
+    background-color:grey;
+    text-align: center;
+    padding: 50pt;
 }
