--- a/styling/styles.css
+++ b/styling/styles.css
@@ -1,6 +1,12 @@
 
 h1 {
     text-align: center;
+    font-size: 100pt;
+    padding-left: 50pt;
+}
+
+th {
+    background-color: grey;
 }
 
 h2 {
@@ -18,5 +24,5 @@ p {
 footer {
     background-color:grey;
     text-align: center;
-   /* padding: 50pt; */
+   /* padding: 30pt; */
 }
