--- a/styling/styles.css
+++ b/styling/styles.css
@@ -1,12 +1,13 @@
 
 h1 {
     text-align: center;
-    font-size: 100pt;
-    padding-left: 50pt;
+    font-size: 50pt;
+    
 }
 
 th {
     background-color: grey;
+    padding: 50pt;
 }
 
 h2 {
